Updates to CFPs
Added Gius SI to CFP and moved Black Sankofa to CFP archive

--- a/submissions/cfps_archive.html
+++ b/submissions/cfps_archive.html
@@ -15,6 +15,57 @@
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
 
+<h2>Digital Sankofa: Understanding Black Digital Humanities  past and futures</h2>
+<p>Guest Editors: Rebecca Y.  Bayeck, Ph.D and  Kevin Winstead, Ph.D</p>
+<p>Abstracts due: March 28, 2022</p>
+        <h3>Introduction</h3>
+        <p>Black lives and experiences have been captured, investigated, interpreted, and analyzed from different perspectives and reasons in various ways and different fields/disciplines. The digital world presents new opportunities and challenges for understanding, analyzing, presenting,  and making  sense of Black lives and experiences. Understanding that Black digital humanities is the intersection of  Blackness with technology (Gallon, 2016), we are calling for papers that highlight how emerging  technology (ies) has been used and could be employed to a) explore Blackness; b) how technology has been used and could be a tool/space to present, define, and study Black people, culture and history in a digital world and with digital tools. This call is also captured in Sankofa, a concept of the  Akan people of Ghana, which calls to remember the past to make positive progress in the future.</p>
+        <p>We situate Blackness in its globality, and do not limit Blackness to Blacks in the western world, but include Blacks on the African continent.  Furthermore, building on Chimamanda Ngozi Adichie' s “The Danger of a Single Story” Ted Talk, we situate Black digital humanities in its globality. In doing so, we intend to avoid the creation of a “single story”; avoid presenting Blackness “as one thing, as only one thing, over and over again” in a digital world. With Digital Sankofa, we consider how Blackness and Blacks have been constructed in digital spaces; we think of Blackness and Black people's past and future intersection with technology.</p>
+        <p>Whether we have consistently engaged in this work, or are brand new to these considerations, now is an opportune time to reflect on the role of technology in: shaping, defining, presenting, and/or constructing Black lives, Blackness, and Black experiences. In this special issue, we therefore invite scholars in various fields to submit manuscripts (3000-8000 words) that address any of the following areas:
+</p>
+        <ol>
+            <li>The field of Black digital Humanities (DH), past and future possibilities: 
+                <ul>
+                    <li>Relationship between Black data curation and Black DH</li><li>
+Afropessimism and Black DH</li>
+                    <li>Intellectual History and Future Possibilities of Black DH</li>
+                    <li>Algorithmic explorations of Black history and culture</li></ul>
+            </li>
+            <li>Privacy and ethics in Black DH
+                <ul>
+                    <li>Researching Black experiences in a digital world</li>
+                    <li>Principles for Black Data curation in a digital world</li>
+                    <li>Privacy  and ethical approaches  for Black Digital Humanities</li></ul>
+            </li>
+            <li>Interdisciplinary interpretation/framing of Black lives/experiences. 
+                <ul>
+                    <li>Black DH and CRT</li>
+                    <li>Building a Black DH: Bridging social sciences and Humanities</li>
+                </ul> 
+            </li>
+</ol>
+        <h3>Important Dates</h3>
+        <p><strong>February 28, 2022</strong>: Call for Proposals for the Special Issue is open</p>
+        <p><strong>March 28, 2022</strong>: 500-word abstract due to the Guest Editors for initial review. Submit through @blackhumanitiesdigital@gmail.com  Please name your file by lastname_shortenedabstracttitle</p>
+        <p><strong>March 30, 2022</strong>: Invitation to submit Full Manuscript sent to authors</p>
+        <p><strong>May 30, 2022</strong>: First draft of paper due. Submit manuscript  for first round of review by the guest editors @blackhumanitiesdigital@gmail.com</p>
+        <p><strong>June 15, 2022</strong>: Feedback from Guest Editors to authors</p>
+        <p><strong>June 30, 2022</strong>: Submit first draft to DHQ: http://www.digitalhumanities.org/dhq/submissions/index.html. (N.B. Not all invited articles will be accepted. Acceptance will depend on the review process.)</p>
+        <p><strong>November 30, 2022</strong>: Review completed and author(s) notified of decision </p>
+        <p><strong>December 30, 2022</strong>: Revised manuscript due.  Submit to DHQ: http://www.digitalhumanities.org/dhq/submissions/index.html</p>
+        <p><strong>February 30, 2023</strong>: Feedback due to author on revised manuscript.  </p>
+        <p><strong>April 1st, 2023</strong>: Final manuscript due </p>
+        <p><strong>May 1st, 2023</strong>: Final manuscript accepted and sent to publisher</p>
+        <p><strong>June, 2023</strong>: Publication online </p>
+        
+        <h3>References</h3>
+        <p>Adichie, Chimamanda Ngozi. “The Danger of a Single Story.” TEDGlobal, TED, 23 July
+2009, Oxford, UK. Speech.</p>
+        <p>Gallon, Kim. “Making a Case for Black Digital Humanities.” In Debates in the Digital
+Humanities 2016, edited by Matthew K. Gold and Lauren F. Klein, 42–49. Minneapolis: University of Minnesota Press, 2016            
+        </p>
+
+
         <h2>Digital Humanities Quarterly Special Issue on Critical Code Studies</h2>
         <p>Guest editors: Mark Marino and Jeremy Douglass</p>
         <p>Abstracts due November 15, 2020</p>
