--- a/people/people.html
+++ b/people/people.html
@@ -133,6 +133,7 @@
         <ul>
             <li>Avery Blankenship, Northeastern University</li>
             <li>R. B. Faure, Northeastern University</li>
+            <li>Benjamin Grey, Northeastern University</li>
         </ul>
             
         <h2>Contributing Reviewers</h2>
