Adding announcements of the DHQ editorial CFPs

--- a/announcements/announcements_archive.html
+++ b/announcements/announcements_archive.html
@@ -7,6 +7,10 @@
         <h1>Archive of Past Announcements</h1>
         
        <h1>Archive of Past Announcements</h1>
+        <h2>Suspension of Winter 2022 submission deadline</h2>
+        <p>December 2021</p>
+        <p>DHQ will be suspending its January 2022 submission deadline, to give the journal an opportunity to focus its resources on essential production work during the disruption of the COVID-19 pandemic. We will reopen submissions with our April 2022 submission deadline. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding!</p>
+
         <h2>Call for Nominations and Applications: DHQ General Editor</h2>
         <p>July 24, 2021</p>
         <p> Digital Humanities Quarterly invites nominations and applications for a new General
