--- a/submissions/dhq_encoding_documentation.html
+++ b/submissions/dhq_encoding_documentation.html
@@ -508,6 +508,8 @@ out by new technology&lt;/quote&gt;
 <li>Smith and Jones 2008</li>
 <li>Smith et al. 2008</li>
 <li>Sinclair-Smith 2008</li></ul>
+<p>Items within the bibliography will be sorted by default based on the value of @label. However, if the author name includes diacritics or capitalization that cause it to sort out of order (for instance, "de Soto" and "Ölman" will sort after "Zachary"), the sort order can be manually controlled using @sortKey. The value of @sortKey should provide a version of the name that will sort in the desired location (e.g. "De Soto" or "Olman" in the above examples).
+</p>				    
 <p>The value of @key is typically the same as @xml:id, unless the disambiguation characters within the DHQ article are different from those used within Biblio.
 </p>
 <h4><span id="&lt;ptr&gt;"></span><span class="mw-headline" id=".3Cptr.3E">&lt;ptr&gt;</span></h4>
