--- a/announcements/index.html
+++ b/announcements/index.html
@@ -5,10 +5,17 @@
     </head>
     <body>
         <h1>Announcements</h1>
-        <h2>Suspension of Winter 2022 submission deadline</h2>
-        <p>DHQ will be suspending its January 2022 submission deadline, to give the journal an opportunity to focus its resources on essential production work during the disruption of the COVID-19 pandemic. We will reopen submissions with our April 2022 submission deadline. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding!</p>
+        <h2>Calls for Editors</h2>
+        <p>DHQ is continuing its recruitment of new editorial positions in summer 2022 with four calls for participation:</p>
+            <ul>
+                <li><a href="peer_reviews_editor_call.html">Peer Reviews Editor</a></li>
+                <li><a href="collaborative_development_editor_call.html">Collaborative Development Editor</a></li>
+                <li><a href="communications_outreach_editor_call.html">Communications and Outreach Editor</a></li>
+                <li><a href="data_analytics_editor_call.html">Data Analytics Editor</a></li>
+            </ul>
+        <p>Please see the individual calls (linked above) for details about the specific roles and responsibilities of each position. All of these are volunteer positions within the DHQ editorial team, for an initial (renewable) term of three years. </p>
+        <p>If you are interested in volunteering for one of these positions, please submit a one-page statement by June 24, 2022 describing your interest in the position and your vision for how you would contribute to DHQ’s mission, along with a copy of your CV. We are especially interested in recruiting a diverse editorial team, and in candidates who can contribute a global perspective on the DH field. Statements and CVs can be uploaded via <a href="https://forms.gle/1vU86wV9wu55pv9N9">Google form</a>. We’ll be interviewing candidates via Zoom, and we expect to start orientation for this and the other new editorial positions in late summer.</p>
 
-        
         
     </body>
 </html>
