extended deadline for SI CFP
also adding more <eg> examples to the beastiary

--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -22,7 +22,7 @@
         
 <h2>Working on and with Categories for Text Analysis: Challenges and Findings from and for Digital Humanities Practices</h2>
      <p>Guest editors: Dominik Gerstorfer, Evelyn Gius and Janina Jacke</p>
-     <p>Abstracts due: June 15, 2022</p>
+     <p>Abstracts due (extended deadline): June 22, 2022</p>
      <h3>Introduction</h3>
         <p>In the digital humanities, computational social sciences and related fields, the development and use of category systems (e.g. ontologies, taxonomies or typologies) plays an important role in the systematization and analysis of texts. Categories allow for the linguistic labeling of texts or (textual) phenomena, as well as for their combination or differentiation based on selected relevant features. By selecting suitable parameters for grouping, categories usually allow for a systematic reduction of complexity and the ordering of complex textual artifacts and data sets, which in turn considerably facilitates both their analysis and the communication of analysis results. </p><p>
 At the same time, category systems offer the possibility of a detailed text systematization or description through the formation of subcategories. If category systems are created as ontologies or taxonomies, they can additionally provide information about the relationship of relevant (text) phenomena to each other. Moreover, since the creation of categories usually requires the specification of explicit definitions of terms or categories, the scholarly exchange of information on subjects in the humanities, cultural studies, or social sciences is greatly facilitated – among other things, through easier understanding and better comparability of statements.</p><p>
@@ -58,8 +58,8 @@ Contributions should be based on concrete studies in the field of the digital hu
 </li></ol>
         <h3>Provisional schedule</h3>
 <ul>
-    <li>15 June 2022: Proposals due to editors (dhq@fortext.org); 750 words plus an indication of the intended DHQ submission format</li>
-    <li>1 July 2022: Notification of acceptance of proposals sent to authors</li>
+    <li>22 June 2022 (extended deadline): Proposals due to editors (dhq@fortext.org); 750 words plus an indication of the intended DHQ submission format</li>
+    <li>July 2022: Notification of acceptance of proposals sent to authors</li>
     <li>25 November 2022: Full papers due  (3,000-8,000 words). Submit manuscripts to DHQ at http://www.digitalhumanities.org/dhq/submissions/index.html. (N.B. Acceptance of invited papers will depend on the DHQ peer review process.)</li>
     <li>February 2023: Notificatinos of acceptance of manuscripts and revision requests</li>
     <li>April 2023: Revised manuscripts due</li>
