Update to schematron and People
Added Anke Finger; updated Schematron to allow <ptr> with @type=dhq-annex-embed" to point externally

--- a/people/people.html
+++ b/people/people.html
@@ -149,10 +149,10 @@
         <div>
           <div id="BioExpander13" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(13)">[+]</a>
-          </div> Peer Reviews Editor: Anke Finger, University of Connecticut, Storrs <br />
+          </div> Peer Reviews Editor: Anke Finger, University of Connecticut <br />
         </div>
         <div id="Bio13" style="DISPLAY: none">
-            <p class="bio"></p>
+            <p class="bio">Anke Finger is Professor of German and Media Studies and Comparative Literature at the University of Connecticut and is the co-founder and co-editor (2005-2015) of <em>Flusser Studies</em>, one of the first open access, multilingual, peer-reviewed online journals. She has published widely in the areas of interart studies, media studies and multimodal scholarship. The founder and inaugural director of the Digital Humanities and Media Studies (DHMS) initiative at the University of Connecticut Humanities Institute and the DHMS graduate certificate, she is particularly interested in bridging DH and media studies and in advocating digital scholarship at all levels. Recent books include <em>Shaping the Digital Dissertation: Knowledge Production in the Arts and Humanities</em> (edited with Virginia Kuhn, 2021, OA) and <em>Bias, Belief and Conviction in an Age of Fake Facts</em> (edited with Manuela Wagner, 2022, OA). </p>
         </div>
 
       
