--- a/people/people.html
+++ b/people/people.html
@@ -156,7 +156,7 @@
         </div>
 
       
- <!--    TEMPLATE for bios    
+ <!--    TEMPLATE for bios (the numeric portions in lines 161, 162, and 165 need to match)   
         <div>
           <div id="BioExpander11" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(11)">[+]</a>
