Updates to citation format information

--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p class="anchorNav"><a href="index.html">Submission Guidelines</a> | <a href="cfps.html"
-                >CFPs</a> | <a href="textGuidelines.html">DHQ Style Guidelines</a> | <a
+                >CFPs</a> | <a href="textGuidelines.html">DHQ Style and Citation Guidelines</a> | <a
                 href="reviews.html">Review Articles</a>
             <br /><a href="specialIssuesGuidelines.html">Special Issues</a> | <a
                 href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a
