--- a/submissions/specialIssuesGuidelines.html
+++ b/submissions/specialIssuesGuidelines.html
@@ -6,7 +6,7 @@
     <body>
         <p class="anchorNav"><a href="index.html">Submission
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
-                Guidelines</a> | <a href="reviews.html">Review Articles</a>
+               and Citation Guidelines</a> | <a href="reviews.html">Review Articles</a>
             <br />Special
                 Issues | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>DHQ Special Issues</h1>
