--- a/submissions/publication_terms.html
+++ b/submissions/publication_terms.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p class="anchorNav"><a href="index.html">DHQ Submission Guidelines</a> | <a
-                href="textGuidelines.html">DHQ Style
+                href="textGuidelines.html">DHQ Style and Citation
                 Guidelines</a>
                 <br/><a href="specialIssuesGuidelines.html">Special Issues Guidelines</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | Terms of Publication  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>Terms of Publication for DHQ</h1>
