--- a/submissions/reviews.html
+++ b/submissions/reviews.html
@@ -6,7 +6,7 @@
     <body> 
         <p class="anchorNav"><a href="index.html">Submission
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
-                Guidelines</a> | Review Articles
+               and Citation Guidelines</a> | Review Articles
             <br /><a href="specialIssuesGuidelines.html">Special
                 Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>Review Articles: Reviews of Books, Tools, and Sites</h1>
