--- a/submissions/statistics_old.html
+++ b/submissions/statistics_old.html
@@ -6,7 +6,7 @@
     <body>
         <p class="anchorNav"><a href="index.html">Submission
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
-                Guidelines</a> | <a href="reviews.html">Review Articles</a>
+               and Citation Guidelines</a> | <a href="reviews.html">Review Articles</a>
             <br /><a href="specialIssuesGuidelines.html">Special
                 Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a> | Statistics</p>
         
