Adding Alicia Svenson to the People page

--- a/people/people.html
+++ b/people/people.html
@@ -200,6 +200,7 @@
             <li>Avery Blankenship, Northeastern University</li>
             <li>R. B. Faure, Northeastern University</li>
             <li>Benjamin Grey, Northeastern University</li>
+        	<li>Alicia Svenson, Northeastern University</li>
         </ul>
 <!--              
         <h2>Contributing Reviewers</h2>
