Relocate encoding documentation to the DHQ GitHub wiki, and update links

--- a/submissions/index.html
+++ b/submissions/index.html
@@ -72,7 +72,7 @@ It must be well written, and must present its argument clearly and interestingly
        <h2>Formats of Submission and Publication</h2>
        <p>DHQ is an entirely digital journal, published in XML. We accept submissions in the following formats:</p>
        <ul>
-          <li>XML files encoded in the DHQ markup language; a <a href="http://www.digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rnc">schema</a> and <a href="http://www.digitalhumanities.org/dhq/articles/templates/dhq_author_template.xml">authoring template</a> are available.</li>
+          <li>XML files encoded in the DHQ markup language; a <a href="http://www.digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rnc">schema</a>, <a href="http://www.digitalhumanities.org/dhq/articles/templates/dhq_author_template.xml">authoring template</a>, and <a href="https://github.com/Digital-Humanities-Quarterly/dhq-journal/wiki/DHQ-Encoding-Documentation">encoding documentation</a> are available.</li>
           <li>XML files encoded in TEI</li>
           <li>RTF, OpenOffice (and its variants), or MS Word</li>
        </ul>
