--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -20,7 +20,7 @@
             with you.</p>
         <p>If you would like to prepare your submission in XML using the DHQ schema (a TEI customization), please use the 
             <a href="dhq_author_template.xml">DHQ author template</a>. The <a
-                href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rng">DHQ schema</a>, <a href="dhq_encoding_documentation.html">encoding documentation</a>, and <a href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.xml">ODD file</a> are also available.
+                href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rng">DHQ schema</a>, <a href="https://github.com/Digital-Humanities-Quarterly/dhq-journal/wiki/DHQ-Encoding-Documentation">encoding documentation</a>, and <a href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.xml">ODD file</a> are also available.
             </p>
     	<h2>Citation Style</h2>
     	<p>Reference format: Please use the version of the Harvard system described below.
