Refactored the navigation for the submission and related pages
Created separate Citation Guideline pages and rationalized the navigation within the set of pages in the Submissions area of the DHQ site

--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>DHQ Submission Guidelines</title>
+        <title>Calls for Proposals</title>
     </head>
     <body>
-        <p class="anchorNav"><a href="index.html">Submission Guidelines</a> | <a href="cfps.html"
-                >CFPs</a> | <a href="textGuidelines.html">DHQ Style and Citation Guidelines</a> | <a
-                href="reviews.html">Review Articles</a>
-            <br /><a href="specialIssuesGuidelines.html">Special Issues</a> | <a
-                href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a
-                href="publication_terms.html">Terms of Publication</a> | <a href="statistics.html"
-                >Acceptance Rates and Indexing</a></p>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<br />
+        	<strong>CFPs</strong>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
         <h1>Calls for Proposals</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
