--- a/submissions/reviews.html
+++ b/submissions/reviews.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>Review Articles in DHQ</title>
+        <title>Book and Tool Review Articles</title>
     </head>
     <body> 
-        <p class="anchorNav"><a href="index.html">Submission
-                Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
-               and Citation Guidelines</a> | Review Articles
-            <br /><a href="specialIssuesGuidelines.html">Special
-                Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<strong>Book and Tool Reviews</strong>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
         <h1>Review Articles: Reviews of Books, Tools, and Sites</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
