--- a/submissions/publication_terms.html
+++ b/submissions/publication_terms.html
@@ -4,10 +4,18 @@
         <title>DHQ Terms of Publication</title>
     </head>
     <body>
-        <p class="anchorNav"><a href="index.html">DHQ Submission Guidelines</a> | <a
-                href="textGuidelines.html">DHQ Style and Citation
-                Guidelines</a>
-                <br/><a href="specialIssuesGuidelines.html">Special Issues Guidelines</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | Terms of Publication  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<strong>Terms of Publication</strong> 
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
         <h1>Terms of Publication for DHQ</h1>
         
         <p>The following are the terms of publication for all DHQ material:</p>
