--- a/submissions/specialIssuesGuidelines.html
+++ b/submissions/specialIssuesGuidelines.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>Special Issues</title>
+        <title>Guidelines for Special Issues</title>
     </head>
     <body>
-        <p class="anchorNav"><a href="index.html">Submission
-                Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
-               and Citation Guidelines</a> | <a href="reviews.html">Review Articles</a>
-            <br />Special
-                Issues | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<strong>Special Issues</strong> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
         <h1>DHQ Special Issues</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
