--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>Text Guidelines</title>
+        <title>DHQ Style Guidelines</title>
     </head>
     <body> 
-        <p class="anchorNav"><a href="index.html">Submission
-                Guidelines</a> | <a href="cfps.html">CFPs</a> | DHQ Style and Citation
-                Guidelines | <a href="reviews.html">Review Articles</a>
-            <br /><a href="specialIssuesGuidelines.html">Special
-                Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
-        <h1>DHQ Style and Citation Guidelines</h1>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<strong>Style Guidelines</strong>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
+        <h1>DHQ Style Guidelines</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
         <p>All formatting and presentational details will be governed by the DHQ publication
@@ -21,31 +28,7 @@
         <p>If you would like to prepare your submission in XML using the DHQ schema (a TEI customization), please use the 
             <a href="dhq_author_template.xml">DHQ author template</a>. The <a
                 href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.rng">DHQ schema</a>, <a href="https://github.com/Digital-Humanities-Quarterly/dhq-journal/wiki/DHQ-Encoding-Documentation">encoding documentation</a>, and <a href="http://digitalhumanities.org/dhq/common/schema/DHQauthor-TEI.xml">ODD file</a> are also available.
-            </p>
-    	<h2>Citation Style</h2>
-    	<p>Reference format: Please use the version of the Harvard system described below.
-            References should be cited in the text using the author's name and year of publication,
-            e.g. (Bloggs, 1990; Bloggs et al., 1991). (Again, authors using DHQ XML will find
-            guidance on these issues in the DHQauthor Schema documentation.)</p>
-        <p>[Biber 1988] Biber, D. Variation Across Speech and Writing. Cambridge University Press,
-            Cambridge (1989).</p>
-        <p>[Calzolari 1989] Calzolari, N. A Typology of English Texts, Linguistics, 27: 3-43.</p>
-        <p>[Computer-Aided Lexicography 1989] &quot;Computer-Aided Lexicography: Dictionaries
-            and Word Databases.&quot; In I. S. Batori, W. Lenders, and W. Putschke (eds),
-            Computational Linguistics, Berlin (1989), pp. 510-19.</p>
-        <p>[Ellis 1987] Ellis, D. The Derivation of a Behavioural Model for Information Retrieval
-            Design. Ph.D. thesis, University of Sheffield (1987).</p>
-        <p>[Halliday 1985] Halliday, M. A. K. An Introduction to Functional Grammar. Edward Arnold,
-            London (1985).</p>
-        <p>[Oostdijk 1988] Oostdijk, N. &ldquo;A Corpus Linguistic Approach to Linguistic
-            Variation&rdquo;, Literary and Linguistic Computing, 3 (1988): 12-25.</p>
-        <p>[Richardson 1988] Richardson, S. D. and Braden-Harder, L. &ldquo;The Experience of
-            Developing a Large-Scale Natural Language Text Processing System&rdquo; CRITIQUE:
-            Proceedings of the Second Conference on Applied Natural Language Processing, Austin,
-            Texas, February 1988.</p>
-        <p>[Wallraff 1988] Wallraff, B. &ldquo;The Literate Computer&rdquo;, The Atlantic
-            Monthly, 261.1 (1988): 64-71.</p>
-    	
+            </p>    	
     	
     	        <h2>Notes and References</h2>
         <p>Notes should be used only for comments, not for simple bibliographic citations. Notes
