--- a/announcements/index.html
+++ b/announcements/index.html
@@ -6,16 +6,47 @@
     <body>
         <h1>Announcements</h1>
         <h2>Calls for Editors</h2>
-        <p>DHQ is continuing its recruitment of new editorial positions in summer 2022 with four calls for participation:</p>
+        <p>DHQ is continuing its recruitment of new editorial positions in summer 2022 with the following calls for participation:</p>
             <ul>
+                <li><a href="indexing_editor_call.html">Indexing and Metadata Editor</a></li>
+            	
                 <li><a href="peer_reviews_editor_call.html">Peer Reviews Editor</a></li>
                 <li><a href="collaborative_development_editor_call.html">Collaborative Development Editor</a></li>
                 <li><a href="communications_outreach_editor_call.html">Communications and Outreach Editor</a></li>
                 <li><a href="data_analytics_editor_call.html">Data Analytics Editor</a></li>
             </ul>
         <p>Please see the individual calls (listed below) for details about the specific roles and responsibilities of each position. All of these are volunteer positions within the DHQ editorial team, for an initial (renewable) term of three years. </p>
-        <p>If you are interested in volunteering for one of these positions, please submit a one-page statement by June 24, 2022 describing your interest in the position and your vision for how you would contribute to DHQ’s mission, along with a copy of your CV. We are especially interested in recruiting a diverse editorial team, and in candidates who can contribute a global perspective on the DH field. We encourage applications from people working in all different capacities including staff, students, and faculty, within and outside the academy. Statements and CVs can be uploaded via <a href="https://forms.gle/1vU86wV9wu55pv9N9">Google form</a>. We’ll be interviewing candidates via Zoom, and we expect to start orientation for this and the other new editorial positions in late summer.</p>
-        
+        <p>If you are interested in volunteering for one of these positions, please submit a one-page statement describing your interest in the position and your vision for how you would contribute to DHQ’s mission, along with a copy of your CV. We are especially interested in recruiting a diverse editorial team, and in candidates who can contribute a global perspective on the DH field. We encourage applications from people working in all different capacities including staff, students, and faculty, within and outside the academy. Statements and CVs can be uploaded via <a href="https://forms.gle/1vU86wV9wu55pv9N9">Google form</a>. We’ll follow up with candidates to schedule a short interview via Zoom.</p>
+
+		<h3>Digital Humanities Projects Editor</h3>
+    	<p>The inaugural position of Digital Humanities Projects Editor is a volunteer position on the Digital Humanities Quarterly (DHQ) editorial team. The editor will be responsible for leading an initiative to establish a registry of digital humanities projects, potentially in collaboration with other digital humanities initiatives and organizations. Through this commitment to creating and maintaining a project registry, DHQ will improve the discoverability of work in the digital humanities and inform the broader DH community of trends in DH scholarship. For this role, DHQ seeks a volunteer possessing a familiarity with metadata and encoding, an interest in field-level analysis of the digital humanities, a passion for DHQ’s mission and digital humanities scholarship, and experience working in a collaborative environment.
+</p>
+    	<p>Responsibilities include:</p>
+    	<ul>
+    		<li>Creating a plan for maintaining a registry of DH projects.</li>
+    		<li>Creating standards for encoding DH projects in the registry (wikidata, etc.).</li>
+    		<li>Collaborating with related organizations and journals on the potential development of a joint project registry.</li>
+    		<li>Developing pathways for people to contribute DH projects for the registry.</li>
+    		<li>Working with the social media editors to solicit calls for DH projects to register.</li>
+    		<li>Developing a methodology for identifying historic DH projects.</li>
+    		<li>Working with the data analytics editors to identify trends in DH scholarship using the project registry.</li>
+    		<li>Establishing guidelines for maintaining the registry.</li>
+    	</ul>
+    	<h3>Indexing and Metadata Editor</h3>
+        <p>The DHQ Indexing and Metadata Editor is a volunteer position on the DHQ editorial team. All DHQ editorial positions serve for a renewable term of three years. The Indexing Editor is responsible for overseeing DHQ’s presence in public indexes (such as Web of Science) and finding ways of increasing the journal’s citation, Impact Factor (IF), and other metrics of impact. This will include identifying emerging indexes and impact metrics, making sure DHQ is listed on the important ones, and maintaining current information for authors and readers on the DHQ website. For more information about this position, please contact nmenon@iiti.ac.in.</p>
+    	<p>Responsibilities include:</p>
+    	<ul>
+    		<li>Research and strategic planning concerning appropriate indexing metrics and services for DHQ</li>
+    		<li>Awareness of how our data is used in Google Scholar and other points of access</li><li>
+Uploading DHQ data and metadata to indexing sites as necessary</li>
+    		<li>Liasoning with representatives of indexing agencies to be updated on new or evolving parameters</li>
+    		<li>Outreach to other DH journals to develop metrics and alt-metrics strategies</li>
+    		<li>Tracking DHQ’s citation analytics and metrics, and reporting these as needed to DHQ’s funding sources, editorial team, and authors</li>
+    		<li>Working with the data analytics group to create visualisations of our citations/indexing/metrics, and coordinating with the outreach team to circulate these</li>
+    		<li>Developing an understanding of how different indexing metrics are computed and communicating these findings to the DHQ editorial team</li>
+    		<li>Understanding the relationship between indexing and search engine optimization (SEO) and working with the Technical editor to implement necessary changes to the DHQ publication
+</li>
+    	</ul>
         <h3>Communications and Outreach Editor</h3>
         <p>The DHQ Communications and Outreach Editor is a volunteer position on the DHQ editorial
             team, with responsibility for increasing the visibility of DHQ on social media platforms
