--- a/announcements/index.html
+++ b/announcements/index.html
@@ -8,6 +8,7 @@
         <h2>Calls for Editors</h2>
         <p>DHQ is continuing its recruitment of new editorial positions in summer 2022 with the following calls for participation:</p>
             <ul>
+                <li><a href="dhprojects_editor_call.html">DH Projects Editor</a></li>
                 <li><a href="indexing_editor_call.html">Indexing and Metadata Editor</a></li>
             	
                 <li><a href="peer_reviews_editor_call.html">Peer Reviews Editor</a></li>
