--- a/people/people.html
+++ b/people/people.html
@@ -95,7 +95,7 @@
       </div>
       <div id="Bio7" style="DISPLAY: none">
         <p class="bio">
-        Alex Gil is Digital Scholarship Coordinator for the Humanities and History Division at Columbia University, and one of the founders of the Studio@Butler, a technology atelier for faculty, students and librarians. He has published in journals across the Atlantic and the Americas, while sustaining an open and robust online research presence. In 2010-2012 he was a fellow at the Scholars' Lab and NINES at the University of Virginia. He now serves as vice-chair of the Global Outlook::Digital Humanities initiative, and is actively engaged in digital humanities projects at Columbia University and around the world.
+        Alex Gil is Senior Lecturer II and Associate Research Faculty of Digital Humanities in the Department of Spanish and Portuguese at Yale University, where he teaches introductory and advanced courses in digital humanities, and runs project-based learning and collective research initiatives. Before joining Yale, Alex served for ten years as Digital Scholarship Coordinator for the Humanities and History Division at Columbia University, and one of the founders of the Studio@Butler, a technology atelier for faculty, students and librarians. He has published in journals across the Atlantic and the Americas, while sustaining an open and robust online research presence. In 2010-2012 he was a fellow at the Scholars' Lab and NINES at the University of Virginia. He now serves as vice-chair of the Global Outlook::Digital Humanities initiative, and is actively engaged in digital humanities projects at Columbia University and around the world.
         </p>
       </div>
 
