--- a/announcements/index.html
+++ b/announcements/index.html
@@ -8,18 +8,18 @@
         <h2>Calls for Editors</h2>
         <p>DHQ is continuing its recruitment of new editorial positions in summer 2022 with the following calls for participation:</p>
             <ul>
-                <li><a href="dhprojects_editor_call.html">DH Projects Editor</a></li>
-                <li><a href="indexing_editor_call.html">Indexing and Metadata Editor</a></li>
+                <li><a href="#dh_projects">DH Projects Editor</a></li>
+                <li><a href="#indexing">Indexing and Metadata Editor</a></li>
             	
-                <li><a href="peer_reviews_editor_call.html">Peer Reviews Editor</a></li>
-                <li><a href="collaborative_development_editor_call.html">Collaborative Development Editor</a></li>
-                <li><a href="communications_outreach_editor_call.html">Communications and Outreach Editor</a></li>
-                <li><a href="data_analytics_editor_call.html">Data Analytics Editor</a></li>
+                <li><a href="#peer_reviews">Peer Reviews Editor</a></li>
+                <li><a href="#collaborative_development">Collaborative Development Editor</a></li>
+                <li><a href="#communications">Communications and Outreach Editor</a></li>
+                <li><a href="#data_analytics">Data Analytics Editor</a></li>
             </ul>
         <p>Please see the individual calls (listed below) for details about the specific roles and responsibilities of each position. All of these are volunteer positions within the DHQ editorial team, for an initial (renewable) term of three years. </p>
         <p>If you are interested in volunteering for one of these positions, please submit a one-page statement describing your interest in the position and your vision for how you would contribute to DHQ’s mission, along with a copy of your CV. We are especially interested in recruiting a diverse editorial team, and in candidates who can contribute a global perspective on the DH field. We encourage applications from people working in all different capacities including staff, students, and faculty, within and outside the academy. Statements and CVs can be uploaded via <a href="https://forms.gle/1vU86wV9wu55pv9N9">Google form</a>. We’ll follow up with candidates to schedule a short interview via Zoom.</p>
 
-		<h3>Digital Humanities Projects Editor</h3>
+		<h3 id="dh_projects">Digital Humanities Projects Editor</h3>
     	<p>The inaugural position of Digital Humanities Projects Editor is a volunteer position on the Digital Humanities Quarterly (DHQ) editorial team. The editor will be responsible for leading an initiative to establish a registry of digital humanities projects, potentially in collaboration with other digital humanities initiatives and organizations. Through this commitment to creating and maintaining a project registry, DHQ will improve the discoverability of work in the digital humanities and inform the broader DH community of trends in DH scholarship. For this role, DHQ seeks a volunteer possessing a familiarity with metadata and encoding, an interest in field-level analysis of the digital humanities, a passion for DHQ’s mission and digital humanities scholarship, and experience working in a collaborative environment.
 </p>
     	<p>Responsibilities include:</p>
@@ -33,7 +33,7 @@
     		<li>Working with the data analytics editors to identify trends in DH scholarship using the project registry.</li>
     		<li>Establishing guidelines for maintaining the registry.</li>
     	</ul>
-    	<h3>Indexing and Metadata Editor</h3>
+    	<h3 id="indexing">Indexing and Metadata Editor</h3>
         <p>The DHQ Indexing and Metadata Editor is a volunteer position on the DHQ editorial team. All DHQ editorial positions serve for a renewable term of three years. The Indexing Editor is responsible for overseeing DHQ’s presence in public indexes (such as Web of Science) and finding ways of increasing the journal’s citation, Impact Factor (IF), and other metrics of impact. This will include identifying emerging indexes and impact metrics, making sure DHQ is listed on the important ones, and maintaining current information for authors and readers on the DHQ website. For more information about this position, please contact nmenon@iiti.ac.in.</p>
     	<p>Responsibilities include:</p>
     	<ul>
@@ -48,7 +48,7 @@ Uploading DHQ data and metadata to indexing sites as necessary</li>
     		<li>Understanding the relationship between indexing and search engine optimization (SEO) and working with the Technical editor to implement necessary changes to the DHQ publication
 </li>
     	</ul>
-        <h3>Communications and Outreach Editor</h3>
+        <h3 id="communications">Communications and Outreach Editor</h3>
         <p>The DHQ Communications and Outreach Editor is a volunteer position on the DHQ editorial
             team, with responsibility for increasing the visibility of DHQ on social media platforms
             (particularly Twitter) and encourage engagement with the journal. All DHQ editorial
@@ -76,7 +76,7 @@ Uploading DHQ data and metadata to indexing sites as necessary</li>
             <li>Participating in DHQ editorial meetings</li>
         </ul>
         
-        <h3>Data Analytics Editor</h3>
+        <h3 id="data_analytics">Data Analytics Editor</h3>
         <p>The DHQ Data Analytics Editor is a volunteer position on the DHQ editorial team. The
             editor will be responsible for pioneering DHQ’s efforts to incorporate data analytics
             into the journal’s operations. Through this commitment to data analytics under the
@@ -110,7 +110,7 @@ Uploading DHQ data and metadata to indexing sites as necessary</li>
             <li>Participating in DHQ editorial meetings</li>
         </ul>
 
-        <h3>Collaborative Development Editor</h3>
+        <h3 id="collaborative_development">Collaborative Development Editor</h3>
         <p>The DHQ Collaborative Development Editor is a volunteer position within the DHQ editorial
             team, with responsibility for overseeing DHQ’s GitHub repositories and their use in both
             internal and public-facing collaborative workflows. All DHQ editorial positions serve
@@ -132,7 +132,7 @@ Uploading DHQ data and metadata to indexing sites as necessary</li>
         </ul>
 
 
-        <h3>Peer Reviews Editor</h3>
+        <h3 id="peer_reviews">Peer Reviews Editor</h3>
         <p>The DHQ Peer Reviews Editor is a volunteer position on the DHQ editorial team, with
             responsibility for recruiting and leadership of DHQ’s peer reviewer community. This
             position works closely with DHQ’s peer reviewers to support their role in the
