--- a/submissions/citationGuidelines.html
+++ b/submissions/citationGuidelines.html
@@ -59,15 +59,24 @@
 			multiple works, or different editions of the same text, should never be combined. Please
 			provide each reference as a unique entity.</p>
 		<h2>Reference List</h2>
-		<p>All entries in the reference list begin in a similar fashion: with the author&rsquo;s
-			surname, initials, and then the date of publication. The list should be organized
-			alphabetically (single-authored works first), and then chronologically if necessary. As
-			is the case across most citation styles, the reference for a printed book is the
-			simplest and the basis for all other formats. A quick guide to some of the most
-			referenced materials is below. Not every element is required for each type of reference.
-			Items which are only necessary in certain circumstances are enclosed in curly braces
-			&ldquo;{}&rdquo;. Please note the following particulars:</p>
+		<p>Most entries in the reference list begin in a similar fashion: with the author&rsquo;s
+			name followed by the date of publication. The list should be organized alphabetically
+			(single-authored works first), and then chronologically if necessary. As is the case
+			across most citation styles, the reference for a printed book is the simplest and the
+			basis for all other formats. A quick guide to some of the most referenced materials is
+			below. Not every element is required for each type of reference. Items which are only
+			necessary in certain circumstances are enclosed in curly braces &ldquo;{}&rdquo;. Please
+			note the following particulars:</p>
 		<ul>
+			<li>Author names should be given with a surname first, followed by a comma, and then
+				either a full first name or initials (use whichever form is provided by the
+				reference&rsquo;s published record</li>
+			<li>Articles with two authors should be separated by &lsquo;and&rsquo; (e.g., Campbell,
+				James and Murray, Elizabeth.)</li>
+			<li>Articles with three authors should be first separated by comma and then
+				&lsquo;and&rsquo; (e.g., Chandler, W., Li, S., and Osborne, T.)</li>
+			<li>Articles with four or more authors should list the first author, followed by
+				&lsquo;et al.&rsquo; (e.g., Fletcher, Sarah et al.)</li>
 			<li>Initials should be followed by a full point and a space (e.g., an entry for John
 				Edward Doe in the reference list would be &ldquo;Doe, J. E.&rdquo;)</li>
 			<li>&ldquo;X&rdquo; is used to represent numerals</li>
@@ -81,41 +90,38 @@
 				&ldquo;iss.&rdquo;)</li>
 		</ul>
 		<h3>Printed Book</h3>
-		<p>Author surname(s), initials. (YYYY) <em>Book Title</em>. {X edn.} Place of Publication:
-			Publisher.</p>
+		<p>Author Name. (YYYY) <em>Book Title</em>. {X edn.} Place of Publication: Publisher.</p>
 		<h3>Edited Book</h3>
-		<p>Editor surname(s), initials. (ed.) (YYYY) <em>Book Title</em>. {X edn.} Place of
-			Publication: Publisher.</p>
+		<p>Editor Name. (ed.) (YYYY) <em>Book Title</em>. {X edn.} Place of Publication:
+			Publisher.</p>
 		<h3>Chapter in an Edited Book</h3>
-		<p>Author surname(s), initials. (YYYY) &lsquo;Chapter Title&rsquo; in Editor Surname(s),
-			initials (ed.) <em>Book Title</em>. {X edn.} Place of Publication: Publisher, pp.
-			page–range.</p>
+		<p>Author Name. (YYYY) &lsquo;Chapter Title&rsquo; in Editor Name (ed.) <em>Book Title</em>.
+			{X edn.} Place of Publication: Publisher, pp. page–range.</p>
 		<h3>E-Book</h3>
-		<p>Author surname(s), initials. (YYYY) <em>Book Title</em>. {X edn.} Available at: URL or
-			DOI (Accessed: DD Month YYYY).</p>
+		<p>Author Name. (YYYY) <em>Book Title</em>. {X edn.} Available at: URL or DOI (Accessed: DD
+			Month YYYY).</p>
 		<p>(Follow appropriate adaptations for edited books)</p>
 		<h3>Journal Article</h3>
-		<p>Author surname(s), initials. (YYYY) &lsquo;Article Title&rsquo;, <em>Journal Title</em>,
-			volume(issue), pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
+		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Journal Title</em>, volume(issue),
+			pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
 		<h3>Newspaper/Magazine Article</h3>
-		<p>Author surname(s), initials. (YYYY) &lsquo;Article Title&rsquo;, <em>Newspaper/Magazine
-				Title</em>, DD Month, pp. page–range. {Available at: URL or DOI (Accessed: DD Month
-			YYYY).}</p>
+		<p>Author Name. (YYYY) &lsquo;Article Title&rsquo;, <em>Newspaper/Magazine Title</em>, DD
+			Month, pp. page–range. {Available at: URL or DOI (Accessed: DD Month YYYY).}</p>
 		<h3>Website</h3>
-		<p>Author surname(s), initials {or Organization Name}. (YYYY) <em>Webpage or Website
-				Title</em>. Available at URL (Accessed DD Month YYYY).</p>
+		<p>Author Name {or Organization Name}. (YYYY) <em>Webpage or Website Title</em>. Available
+			at URL (Accessed DD Month YYYY).</p>
 		<h3>Social Media</h3>
-		<p>Author surname(s), initials. [@mediaHandle] (YYYY) Post Title [Media Platform] DD Month.
-			Available at: URL (Accessed: DD Month YYYY).</p>
+		<p>Author Name. [@mediaHandle] (YYYY) Post Title [Media Platform] DD Month. Available at:
+			URL (Accessed: DD Month YYYY).</p>
 		<p>(Post titles are not italicized, posts without titles (like tweets) use their full
 			content as a title)</p>
 		<h3>Image</h3>
-		<p>Author surname(s), initials. (YYYY) <em>Image Title</em>. {Place of Publication:
-			Publisher} {Available at: URL (Accessed: DD Month YYYY).}</p>
+		<p>Author Name. (YYYY) <em>Image Title</em>. {Place of Publication: Publisher} {Available
+			at: URL (Accessed: DD Month YYYY).}</p>
 		<h3>Music</h3>
-		<p>Artist surname(s), initials {or Stage Name}. (YYYY) {&lsquo;Song Title&rsquo;,} <em>Album
-				Title</em>. Place of Distribution: Distribution Company. {Available at: URL
-			(Accessed: DD Month YYYY).}</p>
+		<p>Artist Name {or Stage Name}. (YYYY) {&lsquo;Song Title&rsquo;,} <em>Album Title</em>.
+			Place of Distribution: Distribution Company. {Available at: URL (Accessed: DD Month
+			YYYY).}</p>
 		<h3>Film</h3>
 		<p><em>Film Title</em> (YYYY) Directed by Director&rsquo;s Full Name. Place of Distribution:
 			Distribution Company.</p>
