--- a/submissions/citationGuidelines.html
+++ b/submissions/citationGuidelines.html
@@ -70,7 +70,7 @@
 		<ul>
 			<li>Author names should be given with a surname first, followed by a comma, and then
 				either a full first name or initials (use whichever form is provided by the
-				reference&rsquo;s published record</li>
+				reference&rsquo;s published record)</li>
 			<li>Articles with two authors should be separated by &lsquo;and&rsquo; (e.g., Campbell,
 				James and Murray, Elizabeth.)</li>
 			<li>Articles with three authors should be first separated by comma and then
@@ -79,6 +79,7 @@
 				&lsquo;et al.&rsquo; (e.g., Fletcher, Sarah et al.)</li>
 			<li>Initials should be followed by a full point and a space (e.g., an entry for John
 				Edward Doe in the reference list would be &ldquo;Doe, J. E.&rdquo;)</li>
+			<li>Editor names should be treated in the same manner as author names.</li>
 			<li>&ldquo;X&rdquo; is used to represent numerals</li>
 			<li>&ldquo;DD Month YYYY&rdquo; is a two-digit date, the month spelled out completely,
 				and a four-digit year</li>
