Corrected Alex Gil's affiliation

--- a/people/people.html
+++ b/people/people.html
@@ -91,7 +91,7 @@
       <div>
           <div id="BioExpander7" style="DISPLAY: inline">
                 <a class="expandCollapse" title="View Bio" href="javascript:expandBio(7)">[+]</a>
-          </div> Internationalization Editor: Alex Gil, Columbia University <br/>
+          </div> Internationalization Editor: Alex Gil, Yale University <br/>
       </div>
       <div id="Bio7" style="DISPLAY: none">
         <p class="bio">
