Added author support page and associated navigation
Added author_support.html ,and navigation link for author_support.html to all pages in the submissions directory

--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -8,7 +8,8 @@
         	<a href="index.html">Submission Guidelines</a>  |  
         	<a href="textGuidelines.html">Style Guidelines</a>  |  
         	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
-        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<a href="publication_terms.html">Terms of Publication</a> |
+        	<a href="author_support.html">Author Support</a>
         	<br />
         	<strong>CFPs</strong>  | 
         	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
