--- a/submissions/citationGuidelines.html
+++ b/submissions/citationGuidelines.html
@@ -5,14 +5,19 @@
 	</head>
 	<body>
 		<p class="anchorNav">
-			<a href="index.html">Submission Guidelines</a> | <a href="textGuidelines.html">Style
-				Guidelines</a> | <strong>Citation Guidelines</strong> | <a
-				href="publication_terms.html">Terms of Publication</a>
-			<br />
-			<a href="cfps.html">CFPs</a> | <a href="specialIssuesGuidelines.html">Special Issues</a>
-			| <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="reviews.html">Book
-				and Tool Reviews</a> | <a href="statistics.html">Acceptance Rates and Indexing</a>
-		</p>
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<strong>Citation Guidelines</strong>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> |
+        	<a href="author_support.html">Author Support</a>
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
+
 		<h1>DHQ Citation Style Guidelines</h1>
 		<p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
 				Guidelines</a>
