--- a/submissions/publication_terms.html
+++ b/submissions/publication_terms.html
@@ -8,7 +8,8 @@
         	<a href="index.html">Submission Guidelines</a>  |  
         	<a href="textGuidelines.html">Style Guidelines</a>  |  
         	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
-        	<strong>Terms of Publication</strong> 
+        	<strong>Terms of Publication</strong> |
+        	<a href="author_support.html">Author Support</a>
         	<br />
         	<a href="cfps.html">CFPs</a>  | 
         	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
