--- a/submissions/cfps_archive.html
+++ b/submissions/cfps_archive.html
@@ -4,13 +4,20 @@
         <title>DHQ Submission Guidelines</title>
     </head>
     <body>
-        <p class="anchorNav"><a href="index.html">Submission Guidelines</a> | <a href="cfps.html"
-                >CFPs</a> | <a href="textGuidelines.html">DHQ Style and Citation Guidelines</a> | <a
-                href="reviews.html">Review Articles</a>
-            <br /><a href="specialIssuesGuidelines.html">Special Issues</a> | <a
-                href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a
-                href="publication_terms.html">Terms of Publication</a> | <a href="statistics.html"
-                >Statistics</a></p>
+        <p class="anchorNav">
+        	<a href="index.html">Submission Guidelines</a>  |  
+        	<a href="textGuidelines.html">Style Guidelines</a>  |  
+        	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
+        	<a href="publication_terms.html">Terms of Publication</a> |
+        	<a href="author_support.html">Author Support</a>
+        	<br />
+        	<a href="cfps.html">CFPs</a>  | 
+        	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
+        	<a href="peerReviewing.html">Peer Reviewing for DHQ</a>  |
+        	<a href="reviews.html">Book and Tool Reviews</a>  | 
+        	<a href="statistics.html">Acceptance Rates and Indexing</a>
+        </p>
+
         <h1>Archive of Calls for Proposals</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
