--- a/submissions/statistics.html
+++ b/submissions/statistics.html
@@ -46,7 +46,8 @@
         	<a href="index.html">Submission Guidelines</a>  |  
         	<a href="textGuidelines.html">Style Guidelines</a>  |  
         	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
-        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<a href="publication_terms.html">Terms of Publication</a> |
+        	<a href="author_support.html">Author Support</a>
         	<br />
         	<a href="cfps.html">CFPs</a>  | 
         	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
