--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -8,7 +8,8 @@
         	<a href="index.html">Submission Guidelines</a>  |  
         	<strong>Style Guidelines</strong>  |  
         	<a href="citationGuidelines.html">Citation Guidelines</a>  |  
-        	<a href="publication_terms.html">Terms of Publication</a> 
+        	<a href="publication_terms.html">Terms of Publication</a> |
+        	<a href="author_support.html">Author Support</a>
         	<br />
         	<a href="cfps.html">CFPs</a>  | 
         	<a href="specialIssuesGuidelines.html">Special Issues</a> | 
